# Online-Store

./: README.md  pyproject.toml
html/: catalog.html  category.html  contacts.html  main.html
src/: web.py
